--- a/CalendarMobile/app/src/main/AndroidManifest.xml
+++ b/CalendarMobile/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:configChanges="keyboardHidden|orientation">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +21,8 @@
         </activity>
         <activity android:name=".CreateEventActivity" />
         <activity android:name=".UpdateDeleteEventActivity" />
-        <activity android:name=".ShowEventsActivity"></activity>
+        <activity android:name=".DayViewActivity" />
+        <activity android:name=".AllEventsActivity"></activity>
     </application>
 
 </manifest>
